# start

./: .gitignore  .gitmodules  CLAUDE.global.md  Makefile  README.md  config.toml  install.py  install.sh  pyproject.toml  skills.toml
.claude/skills/start-add-plugin/: SKILL.md
agents/: architect.md  designer.md  programmer.md  reviewer.md  tech-writer.md
ai/claude/: CLAUDE.global.md
ai/claude/agents/: designer.md  programmer.md  reviewer.md
ai/claude/hooks/: notify.sh
ai/claude/rules/: my-principles.md
ai/claude/skills/my-principles/: SKILL.md
ai/claude/skills/my-principles/tech/: observability.md  python.md
ai/claude/statusline/: statusline.mjs
ai/skills/my-principles/tech/: python.md
ai/skills/static-publish/scripts/: publish.sh
cli/: __init__.py  __main__.py  claude.py  claudejson.py  config.py  files.py  install.py  manage.py  plugins.py  settings.py  submodule.py  up.py
dotfiles/iterm/: com.googlecode.iterm2.plist
hooks/: focus-track.sh  notify.sh
scripts/: provision.sh  pxe-netboot.sh  run.sh  tcp-listen.sh
scripts/ansible/: ansible.cfg  netbook.yml
scripts/ansible/roles/netbird/defaults/: main.yml
scripts/ansible/roles/netbird/tasks/: main.yml
scripts/ansible/roles/netbook/defaults/: main.yml
scripts/ansible/roles/netbook/files/: README.md  tmux.conf
scripts/ansible/roles/netbook/handlers/: main.yml
scripts/pxe/: docker-compose.yml  pxe-netboot.sh
skills/my-principles/: SKILL.md
skills/my-principles/tech/: frontend.md  infra.md  python.md
skills/static-publish/: SKILL.md
statusline/: statusline.mjs
(+1 files in other folders)
