[project]
name = "claude-agents"
version = "0.1.0"
description = "Линковка персональных агентов, навыков и hooks в ~/.claude + TUI для управления"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "tomlkit>=0.13",
]

[project.scripts]
claude-agents = "cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
