[project]
name = "start"
version = "0.1.0"
description = "Переносимый сетап машины: конфиг Claude Code + dotfiles симлинками из репо, + TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "tomlkit>=0.13",
]

[project.scripts]
start = "cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
